# terminated_by_c

./: .gitignore  CMakeLists.txt  main.c
build_Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: types.h
include/character/: character.h
include/data/: loader.h
include/errors/: input.h
include/rendering/: camera.h  math3d.h
include/rendering/sdl/: sdl_renderer.h  sdl_window.h
include/utils/: file_path.h
scripts/: build.sh
src/character/: character.c
src/data/: loader.c
src/rendering/: camera.c  math3d.c
